--- a/spellsource-web/src/components/creative-layout.module.scss
+++ b/spellsource-web/src/components/creative-layout.module.scss
@@ -585,7 +585,7 @@ section {
   background-color: var(--text-light);
   font-size: $font-size-footer;
   border: 2px solid var(--text-dark);
-  padding: 0 5%;
+  padding: 15px 5%;
   text-decoration: none;
 
   strong{ 
