Main page + card editor working with next

--- a/spellsource-web/src/components/card-editor-view.module.scss
+++ b/spellsource-web/src/components/card-editor-view.module.scss
@@ -22,7 +22,8 @@
     display: inline;
 }
 
+/* TODO needed still?
 body {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-}
+}*/
