--- a/spellsource-web/src/templates/template-styles.module.scss
+++ b/spellsource-web/src/templates/template-styles.module.scss
@@ -5,5 +5,9 @@
 }
 
 .cardEditorContainer{
-  padding: 2vw;
+  padding: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
