Switch to blockly new json serialization standard

--- a/spellsource-web/src/blockly.scss
+++ b/spellsource-web/src/blockly.scss
@@ -99,6 +99,10 @@
   --placeholder-color: black;
 }
 
+.blocklyTreeRow input::placeholder {
+  color: black
+}
+
 .blocklyTreeRow:not(.blocklyTreeSelected):not(:hover) input {
   background-color: rgb(221, 221, 221);
 }
